Bug 417319 - Problems when using Shift+F4 to open a local file that exists, or a remote folder or remote file that exists
Summary: Problems when using Shift+F4 to open a local file that exists, or a remote fo...
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-08 19:27 UTC by Toni Asensi Esteve
Modified: 2020-02-15 17:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toni Asensi Esteve 2020-02-08 19:27:12 UTC
SUMMARY
Some errors happen when using Shift+F4 to open some local file that exist (for example after typing /etc/password), or a remote folder or remote file that exists.

EXAMPLES
For example, when users press Shift+F4 and paste the path of a local existent file like /etc/passwd, that file is not opened and the user is informed about it. There are also unexpected problems when pasting the path of existing remote files (or folders).
Comment 1 Toni Asensi Esteve 2020-02-08 19:29:00 UTC
Sorry, I meant "that file is not opened and the user is not informed about it."
Comment 2 Toni Asensi Esteve 2020-02-08 19:38:20 UTC
There's a proposed solution in https://phabricator.kde.org/D27259
Comment 3 Toni Asensi Esteve 2020-02-15 17:26:31 UTC
Git commit 9b9fa9d70d00c00869753522fffc95e04c80b757 by Toni Asensi Esteve.
Committed on 15/02/2020 at 17:24.
Pushed by asensi into branch 'master'.

Manage the use of Shift+F4 when opening a local file that exists, or a remote folder or remote file that exists

This modification achieves that, for example, when users press Shift+F4 and paste the path of a local existent file like /etc/passwd, that file gets edited (instead of not getting opened and the user not getting informed about it). It also manages the cases of remote files.

TEST PLAN:
    Using Shift+F4 to try to open a:
        - local file that exists: /etc/passwd
        - local file that doesn't exist: /tmp/nonexistent
        - local folder that exists: /etc    (Krusader has to say something like "You cannot edit a folder.")
        - remote file that exists: smb://user@IP_ADDRESS/PATH/EXISTENT_FILE
        - remote file that doesn't exist : smb://user@IP_ADDRESS/NONEXISTENT
        - remote file that exists: fish://user@IP_ADDRESS:PORT/PATH/EXISTENT_FILE
        - remote file that doesn't exist : fish://user@IP_ADDRESS:PORT/NONEXISTENT
        - remote folder that exists: smb://user@IP_ADDRESS/PATH/EXISTENT_FOLDER
        - remote folder that exists: fish://user@IP_ADDRESS:PORT/PATH/EXISTENT_FOLDER

    Performing the tests using the default internal editor and also /usr/bin/kate.

    Performing the tests using a system with a Qt version older than 5.11 (like Kubuntu 18.04 LTS) and a system with a Qt version equal or newer than 5.11 (like Kubuntu 19.10) because of a `#if QT_VERSION >= QT_VERSION_CHECK(5, 11, 0)`.

    Editing the existing files, but using F4 instead of Shift+F4.

FIXED: [ 417319 ] Problems when using Shift+F4 to open a local file that exists, or a remote folder or remote file that exists

Differential Revision: https://phabricator.kde.org/D27259

M  +37   -9    krusader/Panel/panelfunc.cpp
M  +3    -0    krusader/Panel/panelfunc.h

https://commits.kde.org/krusader/9b9fa9d70d00c00869753522fffc95e04c80b757